--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Cabin&display=swap"
             rel="stylesheet"
         />
     </head>
@@ -35,19 +35,17 @@
                 </button>
             </div>
         </div>
-    </body>
 
-    <!-- Footer Section -->
-    <div class="footer__container">
-        <div class="footer__links">
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>About Me</h2>
-                    <a href="/index.html">Contact Me</a>
-                    <a href="/index.html">Leave a comment</a>
-                    <a href="/index.html">Support me</a>
-                </div>
-            </div>
+        <!-- Footer Section -->
+        <div class="footer__container">
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="/index.html">Home</a></li>
+                <li class="list-inline-item"><a href="#">Contact me</a></li>
+                <li class="list-inline-item">
+                    <a href="#">Leave your impression</a>
+                </li>
+                <li class="list-inline-item"><a href="#">Support me</a></li>
+            </ul>
         </div>
-    </div>
+    </body>
 </html>
