Add draft anime mode

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <body>
         <!-- Hero Section -->
         <div class="hero" id="home">
+            <div class="header__container">
+                <!-- ANIME MODE TOGGLE -->
+                <input class="animemode-toggle" type="submit" value="" />
+            </div>
             <div class="hero__container">
-                <img
-                    src="images/photo.jpg"
-                    alt="Alexandre Mathieu"
-                    id="photo"
-                />
+                <!-- Main image -->
+                <input class="photo" type="submit" value="" />
                 <h1 class="hero__heading">Alexandre Mathieu</h1>
 
                 <h2 class="hero__main_description">
@@ -47,5 +48,7 @@
                 <li class="list-inline-item"><a href="#">Support me</a></li>
             </ul>
         </div>
+
+        <script src="interactiveImage.js"></script>
     </body>
 </html>
