Add card todo:fix texg in them, make them beautiful

--- a/index.html
+++ b/index.html
@@ -55,9 +55,20 @@
         <!-- Cards Section -->
         <div class="cards">
             <div class="cards__container">
-                <div class="card">1</div>
-                <div class="card">2</div>
-                <div class="card">3</div>
+                <a href="testcard.html" class="card">
+                    <img src="/images/jojo.png" id="bruh" />
+                    <div class="img_description">Quoridor!</div>
+                </a>
+                <div class="card">
+                    <img src="/images/jojo.png" id="bruh" />
+                    <div class="img_description">Quoridor!</div>
+                </div>
+                <div class="card">
+                    <img src="/images/jojo.png" id="bruh2" />
+                </div>
+                <div class="card">
+                    <img src="/images/jojo.png" id="bruh" />
+                </div>
             </div>
         </div>
 
