Make cards reactive and center text in them

--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
             <div class="cards__container">
                 <a href="testcard.html" class="card">
                     <img src="/images/jojo.png" id="bruh" />
-                    <div class="img_description">Quoridor!</div>
+                    <div class="project_language">Python</div>
+                    <div class="project_name">Quoridor!</div>
                 </a>
                 <div class="card">
                     <img src="/images/jojo.png" id="bruh" />
-                    <div class="img_description">Quoridor!</div>
+                    <div class="project_language">Java</div>
+                    <div class="project_name">GlootDo</div>
                 </div>
                 <div class="card">
                     <img src="/images/jojo.png" id="bruh2" />
