Start adding more images (todo: fix reactive)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
                 <input class="animemode-toggle" type="submit" value="" />
             </div>
 
+            <!-- SideImages -->
+            <img src="images/publicdomainq-notebook.svg" id="workingboy" />
+            <img
+                src="images/PikPng.com_star-platinum-png_1581606.png"
+                id="starplatinum"
+            />
+            <!-- end of SideImages -->
+
             <div class="hero__container">
                 <!-- Main image -->
                 <input class="photo" type="submit" value="" />
