--- a/index.html
+++ b/index.html
@@ -64,12 +64,17 @@
         <div class="cards">
             <div class="cards__container">
                 <a href="testcard.html" class="card">
-                    <img src="/images/jojo.png" id="bruh" />
+                    <img src="/images/quoridor.png" id="quoridor" />
                     <div class="project_language">Python</div>
-                    <div class="project_name">Quoridor!</div>
+                    <div class="project_name">Quoridor</div>
+                </a>
+                <a href="testcard.html" class="card" id="glootdo">
+                    <!-- <img src="/images/glootdo.png" id="glootdo" /> -->
+                    <div class="project_language">Java</div>
+                    <div class="project_name">GlootDo</div>
                 </a>
                 <div class="card">
-                    <img src="/images/jojo.png" id="bruh" />
+                    <img src="/images/glootdo.png" id="website" />
                     <div class="project_language">Java</div>
                     <div class="project_name">GlootDo</div>
                 </div>
