--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
                     <div class="project_language">Python</div>
                     <div class="project_name">Quoridor</div>
                 </a>
-                <a href="testcard.html" class="card" id="glootdo">
-                    <!-- <img src="/images/glootdo.png" id="glootdo" /> -->
+                <a href="testcard.html" class="card">
+                    <img src="/images/glootdo.png" id="glootdo" />
                     <div class="project_language">Java</div>
                     <div class="project_name">GlootDo</div>
                 </a>
-                <div class="card">
-                    <img src="/images/glootdo.png" id="website" />
-                    <div class="project_language">Java</div>
-                    <div class="project_name">GlootDo</div>
-                </div>
+                <a href="testcard.html" class="card">
+                    <img src="/images/graphic-design-svgrepo-com.svg" id="website" />
+                    <div class="project_language">HTML/CSS/JS</div>
+                    <div class="project_name">This website!</div>
+                </a>
                 <div class="card">
                     <img src="/images/jojo.png" id="bruh2" />
                 </div>
