Fix reactivity for cards and photo, add my works title

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
                 <input class="animemode-toggle" type="submit" value="" />
             </div>
 
+            <!-- TODO: SEE IF WE KEEP THEM OR NOT -->
             <!-- SideImages -->
-            <img src="images/publicdomainq-notebook.svg" id="workingboy" />
+            <!-- <img src="images/publicdomainq-notebook.svg" id="workingboy" />
             <img
                 src="images/PikPng.com_star-platinum-png_1581606.png"
                 id="starplatinum"
-            />
+            /> -->
             <!-- end of SideImages -->
 
             <div class="hero__container">
@@ -62,6 +63,7 @@
 
         <!-- Cards Section -->
         <div class="cards">
+            <h1 class="cards__heading">My works!</h1>
             <div class="cards__container">
                 <a href="testcard.html" class="card">
                     <img src="/images/quoridor.png" id="quoridor" />
@@ -80,9 +82,13 @@
                 </a>
                 <div class="card">
                     <img src="/images/jojo.png" id="bruh2" />
+                    <div class="project_language">???</div>
+                    <div class="project_name">TODO!</div>
                 </div>
                 <div class="card">
                     <img src="/images/jojo.png" id="bruh" />
+                    <div class="project_language">???</div>
+                    <div class="project_name">TODO!</div>
                 </div>
             </div>
         </div>
