Continue pastworks section, add github/linkedin to footer

--- a/index.html
+++ b/index.html
@@ -122,10 +122,38 @@
             </div>
 
             <h1 class="pastworks__heading">My working experiences!</h1>
+
+            <div class="job__container">
+                <div class="jobtitle__container">
+                    <h2 class="pastworks__main_title">Research Intern</h2>
+                    <p class="pastworks__main_description">
+                        Université Laval - 2021
+                    </p>
+                </div>
+                <div class="jobdescription__container">
+                    <p class="jobdescription__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <img src="/images/hasse_diagram.png" id="ulaval" />
+                </div>
+            </div>
         </div>
 
         <!-- Footer Section -->
         <div class="footer__container">
+            <ul class="medias">
+                <li class="media-item">
+                    <li class="media-item">
+                        <a href="https://github.com/alexmathieu22" target="_blank"><img src="/images/GitHub-Mark-Light-120px-plus.png" /></a>
+                    </li>
+                </li>
+                <li class="media-item">
+                    <a href="https://www.linkedin.com/in/alexandre-mathieu-668943224/" target="_blank"><img src="/images/LI-In-Bug.png" /></a>
+                </li>
+                <li class="media-item">
+                    <a href="/index.html"><img src="/images/resume.png" /></a>
+                </li>
+            </ul>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="/index.html">Home</a></li>
                 <li class="list-inline-item"><a href="#">Contact me</a></li>
