Add pastwork draft

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                 </div>
                 <div class="jobdescription__container">
                     <p class="jobdescription__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. -->
+                        During the 2021 summer semester, I worked as a research intern at Université Laval. I was part of the DEEL project and was under the supervision of François Laviolette, PhD. I primarily worked on deep neural networks explainability. Among other things, I worked with ensemble methods and how to explain them concretely using partial orders and Hasse diagrams (see picture). Having never worked on machine learning prior to this internship, I had to challenge myself and manage to learn a lot in a short period of time. I developped my skills in Python, in the Sci-kit Learn library and learned to use the Pytorch library.
                     </p>
                     <img src="/images/hasse_diagram.png" id="ulaval" />
                 </div>
