--- a/index.html
+++ b/index.html
@@ -18,19 +18,31 @@
     <body>
         <!-- Hero Section -->
         <div class="hero" id="home">
-            <div class="header__container">
-                <!-- ANIME MODE TOGGLE -->
-                <input class="animemode-toggle" type="submit" value="" />
-            </div>
-
-            <!-- TODO: SEE IF WE KEEP THEM OR NOT -->
-            <!-- SideImages -->
-            <!-- <img src="images/publicdomainq-notebook.svg" id="workingboy" />
-            <img
-                src="images/PikPng.com_star-platinum-png_1581606.png"
-                id="starplatinum"
-            /> -->
-            <!-- end of SideImages -->
+            <nav>
+                <div class="header__container">
+                    <ul>
+                        <li>Resume</li>
+                        <li>
+                            <a href="#projects" class="header__link"
+                                >My projects</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#contactme" class="header__link"
+                                >Contact</a
+                            >
+                        </li>
+                        <li>
+                            <!-- ANIME MODE TOGGLE -->
+                            <input
+                                class="animemode-toggle"
+                                type="submit"
+                                value=""
+                            />
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 
             <div class="hero__container">
                 <!-- Main image -->
@@ -62,7 +74,7 @@
 
         <!-- Cards Section -->
         <div class="cards">
-            <h1 class="cards__heading">My projects!</h1>
+            <h1 class="cards__heading" id="projects">My projects!</h1>
             <div class="cards__container">
                 <a href="testcard.html" class="card">
                     <img src="/images/quoridor.png" id="quoridor" />
@@ -82,16 +94,6 @@
                     <div class="project_language">HTML/CSS/JS</div>
                     <div class="project_name">This website!</div>
                 </a>
-                <div class="card">
-                    <img src="/images/jojo.png" id="bruh2" />
-                    <div class="project_language">???</div>
-                    <div class="project_name">TODO!</div>
-                </div>
-                <div class="card">
-                    <img src="/images/jojo.png" id="bruh" />
-                    <div class="project_language">???</div>
-                    <div class="project_name">TODO!</div>
-                </div>
             </div>
         </div>
 
@@ -132,8 +134,18 @@
                 </div>
                 <div class="jobdescription__container">
                     <p class="jobdescription__text">
-                        <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. -->
-                        During the 2021 summer semester, I worked as a research intern at Université Laval. I was part of the DEEL project and was under the supervision of François Laviolette, PhD. I primarily worked on deep neural networks explainability. Among other things, I worked with ensemble methods and how to explain them concretely using partial orders and Hasse diagrams (see picture). Having never worked on machine learning prior to this internship, I had to challenge myself and manage to learn a lot in a short period of time. I developped my skills in Python, in the Sci-kit Learn library and learned to use the Pytorch library.
+                        During the 2021 summer semester, I worked as a research
+                        intern at Université Laval. I was part of the DEEL
+                        project and was under the supervision of François
+                        Laviolette, PhD. I primarily worked on deep neural
+                        networks explainability. Among other things, I worked
+                        with ensemble methods and how to explain them concretely
+                        using partial orders and Hasse diagrams (see picture).
+                        Having never worked on machine learning prior to this
+                        internship, I had to challenge myself and had to learn a
+                        lot in a short period of time. I developped my skills in
+                        Python, e.g. with the Scikit-Learn library, and learned
+                        to use the Pytorch library.
                     </p>
                     <img src="/images/hasse_diagram.png" id="ulaval" />
                 </div>
@@ -141,28 +153,27 @@
         </div>
 
         <!-- Footer Section -->
-        <div class="footer__container">
+        <div class="footer__container" id="contactme">
             <ul class="medias">
                 <li class="media-item">
-                    <li class="media-item">
-                        <a href="https://github.com/alexmathieu22" target="_blank"><img src="/images/GitHub-Mark-Light-120px-plus.png" /></a>
-                    </li>
+                    <a href="https://github.com/alexmathieu22" target="_blank"
+                        ><img src="/images/GitHub-Mark-Light-120px-plus.png"
+                    /></a>
                 </li>
                 <li class="media-item">
-                    <a href="https://www.linkedin.com/in/alexandre-mathieu-668943224/" target="_blank"><img src="/images/LI-In-Bug.png" /></a>
+                    <a
+                        href="https://www.linkedin.com/in/alexandre-mathieu-668943224/"
+                        target="_blank"
+                        ><img src="/images/LI-In-Bug.png"
+                    /></a>
                 </li>
                 <li class="media-item">
-                    <a href="/index.html"><img src="/images/resume.png" /></a>
+                    <a href="mailto:alexandremathieu@outlook.com"
+                        ><img src="/images/mail.png"
+                    /></a>
                 </li>
             </ul>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="/index.html">Home</a></li>
-                <li class="list-inline-item"><a href="#">Contact me</a></li>
-                <li class="list-inline-item">
-                    <a href="#">Leave your impression</a>
-                </li>
-                <li class="list-inline-item"><a href="#">Support me</a></li>
-            </ul>
+            <p class="contact">Contact me!</p>
         </div>
 
         <script src="interactiveImage.js"></script>
