--- a/index.html
+++ b/index.html
@@ -1,181 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Alexandre Mathieu</title>
-        <!-- STYLES CSS -->
-        <link rel="stylesheet" href="styles.css" />
-        <!-- FONTS -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Cabin&family=Licorice&display=swap"
-            rel="stylesheet"
-        />
-    </head>
-    <body>
-        <!-- Hero Section -->
-        <div class="hero" id="home">
-            <nav>
-                <div class="header__container">
-                    <ul>
-                        <li>Resume</li>
-                        <li>
-                            <a href="#projects" class="header__link"
-                                >My projects</a
-                            >
-                        </li>
-                        <li>
-                            <a href="#contactme" class="header__link"
-                                >Contact</a
-                            >
-                        </li>
-                        <li>
-                            <!-- ANIME MODE TOGGLE -->
-                            <input
-                                class="animemode-toggle"
-                                type="submit"
-                                value=""
-                            />
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
-            <div class="hero__container">
-                <!-- Main image -->
-                <input class="photo" type="submit" value="" />
-                <h1 class="hero__heading">Alexandre Mathieu</h1>
-
-                <h2 class="hero__main_description">
-                    Software engineering student at Université Laval
-                </h2>
-
-                <button class="hero__button">
-                    <a href="">Learn more :)</a>
-                </button>
-            </div>
-            <div class="wave">
-                <svg
-                    data-name="Layer 1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 1200 120"
-                    preserveAspectRatio="none"
-                >
-                    <path
-                        d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                        class="shape-fill"
-                    ></path>
-                </svg>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alexandre Mathieu</title>
+    <!-- STYLES CSS -->
+    <link rel="stylesheet" href="styles.css" />
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin&family=Licorice&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Hero Section -->
+    <div class="hero" id="home">
+      <nav>
+        <div class="header__container">
+          <ul>
+            <li>Resume</li>
+            <li>
+              <a href="#projects" class="header__link">My projects</a>
+            </li>
+            <li>
+              <a href="#contactme" class="header__link">Contact</a>
+            </li>
+            <li>
+              <!-- ANIME MODE TOGGLE -->
+              <input class="animemode-toggle" type="submit" value="" />
+            </li>
+          </ul>
         </div>
+      </nav>
 
-        <!-- Cards Section -->
-        <div class="cards">
-            <h1 class="cards__heading" id="projects">My projects!</h1>
-            <div class="cards__container">
-                <a href="testcard.html" class="card">
-                    <img src="/images/quoridor.png" id="quoridor" />
-                    <div class="project_language">Python</div>
-                    <div class="project_name">Quoridor</div>
-                </a>
-                <a href="testcard.html" class="card">
-                    <img src="/images/glootdo.png" id="glootdo" />
-                    <div class="project_language">Java</div>
-                    <div class="project_name">GlootDo</div>
-                </a>
-                <a href="testcard.html" class="card">
-                    <img
-                        src="/images/graphic-design-svgrepo-com.svg"
-                        id="website"
-                    />
-                    <div class="project_language">HTML/CSS/JS</div>
-                    <div class="project_name">This website!</div>
-                </a>
-            </div>
+      <div class="hero__container">
+        <!-- Main image -->
+        <input class="photo" type="submit" value="" />
+        <h1 class="hero__heading">Alexandre Mathieu</h1>
+
+        <h2 class="hero__main_description">
+          Software engineering student at Université Laval
+        </h2>
+
+        <button class="hero__button">
+          <a href="">Learn more :)</a>
+        </button>
+      </div>
+      <div class="wave">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
+        </svg>
+      </div>
+    </div>
+
+    <!-- Cards Section -->
+    <div class="cards">
+      <h1 class="cards__heading" id="projects">My projects!</h1>
+      <div class="cards__container">
+        <div class="card" id="quoridorcard">
+          <img src="/images/quoridor.png" id="quoridor" />
+          <div class="project_language">Python</div>
+          <div class="project_name">Quoridor</div>
         </div>
-
-        <!-- Past working experiences -->
-        <div class="pastworks">
-            <div class="wave_bottom">
-                <svg
-                    data-name="Layer 1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 1200 120"
-                    preserveAspectRatio="none"
-                >
-                    <path
-                        d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
-                        opacity=".25"
-                        class="shape-fill"
-                    ></path>
-                    <path
-                        d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
-                        opacity=".5"
-                        class="shape-fill"
-                    ></path>
-                    <path
-                        d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
-                        class="shape-fill"
-                    ></path>
-                </svg>
-            </div>
-
-            <h1 class="pastworks__heading">My working experiences!</h1>
-
-            <div class="job__container">
-                <div class="jobtitle__container">
-                    <h2 class="pastworks__main_title">Research Intern</h2>
-                    <p class="pastworks__main_description">
-                        Université Laval - 2021
-                    </p>
-                </div>
-                <div class="jobdescription__container">
-                    <p class="jobdescription__text">
-                        During the 2021 summer semester, I worked as a research
-                        intern at Université Laval. I was part of the DEEL
-                        project and was under the supervision of François
-                        Laviolette, PhD. I primarily worked on deep neural
-                        networks explainability. Among other things, I worked
-                        with ensemble methods and how to explain them concretely
-                        using partial orders and Hasse diagrams (see picture).
-                        Having never worked on machine learning prior to this
-                        internship, I had to challenge myself and had to learn a
-                        lot in a short period of time. I developped my skills in
-                        Python, e.g. with the Scikit-Learn library, and learned
-                        to use the Pytorch library.
-                    </p>
-                    <img src="/images/hasse_diagram.png" id="ulaval" />
-                </div>
-            </div>
+        <div class="card" id="glootdocard">
+          <img src="/images/glootdo.png" id="glootdo" />
+          <div class="project_language">Java</div>
+          <div class="project_name">GlootDo</div>
         </div>
-
-        <!-- Footer Section -->
-        <div class="footer__container" id="contactme">
-            <ul class="medias">
-                <li class="media-item">
-                    <a href="https://github.com/alexmathieu22" target="_blank"
-                        ><img src="/images/GitHub-Mark-Light-120px-plus.png"
-                    /></a>
-                </li>
-                <li class="media-item">
-                    <a
-                        href="https://www.linkedin.com/in/alexandre-mathieu-668943224/"
-                        target="_blank"
-                        ><img src="/images/LI-In-Bug.png"
-                    /></a>
-                </li>
-                <li class="media-item">
-                    <a href="mailto:alexandremathieu@outlook.com"
-                        ><img src="/images/mail.png"
-                    /></a>
-                </li>
-            </ul>
-            <p class="contact">Contact me!</p>
+        <div class="card" id="websitecard">
+          <img src="/images/graphic-design-svgrepo-com.svg" id="website" />
+          <div class="project_language">HTML/CSS/JS</div>
+          <div class="project_name">This website!</div>
         </div>
+      </div>
+      <div class="cards_description__container" id="glootdo_desc_card">
+        <img src="/images/glootdo.png" class="img_desc" />
+        <p class="project_descriptions">
+          During the 2021 summer semester, I worked as a research intern at
+          Université Laval. I was part of the DEEL project and was under the
+          supervision of François Laviolette, PhD. I primarily worked on deep
+          neural networks explainability. Among other things, I worked with
+          ensemble methods and how to explain them concretely using partial
+          orders and Hasse diagrams (see picture). Having never worked on
+          machine learning prior to this internship, I had to challenge myself
+          and had to learn a lot in a short period of time. I developped my
+          skills in Python, e.g. with the Scikit-Learn library, and learned to
+          use the Pytorch library.
+        </p>
+        <img src="/images/mail.png" class="exit" id="exit-glootdo" />
+      </div>
 
-        <script src="interactiveImage.js"></script>
-    </body>
+      <div class="cards_description__container" id="quoridor_desc_card">
+        <img src="/images/quoridor.png" class="img_desc" />
+        <p class="project_descriptions">
+          During the 2021 summer semester, I worked as a research intern at
+          Université Laval. I was part of the DEEL project and was under the
+          supervision of François Laviolette, PhD. I primarily worked on deep
+          neural networks explainability. Among other things, I worked with
+          ensemble methods and how to explain them concretely using partial
+          orders and Hasse diagrams (see picture). Having never worked on
+          machine learning prior to this internship, I had to challenge myself
+          and had to learn a lot in a short period of time. I developped my
+          skills in Python, e.g. with the Scikit-Learn library, and learned to
+          use the Pytorch library.
+        </p>
+          <img src="/images/mail.png" class="exit" id="exit-quoridor" />
+      </div>
+
+      <div class="cards_description__container" id="website_desc_card">
+        <img src="/images/graphic-design-svgrepo-com.svg" class="img_desc" />
+        <p class="project_descriptions">
+          During the 2021 summer semester, I worked as a research intern at
+          Université Laval. I was part of the DEEL project and was under the
+          supervision of François Laviolette, PhD. I primarily worked on deep
+          neural networks explainability. Among other things, I worked with
+          ensemble methods and how to explain them concretely using partial
+          orders and Hasse diagrams (see picture). Having never worked on
+          machine learning prior to this internship, I had to challenge myself
+          and had to learn a lot in a short period of time. I developped my
+          skills in Python, e.g. with the Scikit-Learn library, and learned to
+          use the Pytorch library.
+        </p>
+        <img src="/images/mail.png" class="exit" id="exit-website" />
+      </div>
+    </div>
+
+    <!-- Past working experiences -->
+    <div class="pastworks">
+      <div class="wave_bottom">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+            opacity=".25"
+            class="shape-fill"
+          ></path>
+          <path
+            d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+            opacity=".5"
+            class="shape-fill"
+          ></path>
+          <path
+            d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+            class="shape-fill"
+          ></path>
+        </svg>
+      </div>
+
+      <h1 class="pastworks__heading">My working experiences!</h1>
+
+      <div class="job__container">
+        <div class="jobtitle__container">
+          <h2 class="pastworks__main_title">Research Intern</h2>
+          <p class="pastworks__main_description">Université Laval - 2021</p>
+        </div>
+        <div class="jobdescription__container">
+          <p class="jobdescription__text">
+            During the 2021 summer semester, I worked as a research intern at
+            Université Laval. I was part of the DEEL project and was under the
+            supervision of François Laviolette, PhD. I primarily worked on deep
+            neural networks explainability. Among other things, I worked with
+            ensemble methods and how to explain them concretely using partial
+            orders and Hasse diagrams (see picture). Having never worked on
+            machine learning prior to this internship, I had to challenge myself
+            and had to learn a lot in a short period of time. I developped my
+            skills in Python, e.g. with the Scikit-Learn library, and learned to
+            use the Pytorch library.
+          </p>
+          <img src="/images/hasse_diagram.png" id="ulaval" />
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer__container" id="contactme">
+      <ul class="medias">
+        <li class="media-item">
+          <a href="https://github.com/alexmathieu22" target="_blank"
+            ><img src="/images/GitHub-Mark-Light-120px-plus.png"
+          /></a>
+        </li>
+        <li class="media-item">
+          <a
+            href="https://www.linkedin.com/in/alexandre-mathieu-668943224/"
+            target="_blank"
+            ><img src="/images/LI-In-Bug.png"
+          /></a>
+        </li>
+        <li class="media-item">
+          <a href="mailto:alexandremathieu@outlook.com"
+            ><img src="/images/mail.png"
+          /></a>
+        </li>
+      </ul>
+      <p class="contact">Contact me!</p>
+    </div>
+
+    <script src="interactiveImage.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
