--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </h2>
 
         <button class="hero__button">
-          <a href="">Learn more :)</a>
+          <a href="#projects">Learn more :)</a>
         </button>
       </div>
       <div class="wave">
@@ -98,7 +98,7 @@
           skills in Python, e.g. with the Scikit-Learn library, and learned to
           use the Pytorch library.
         </p>
-        <img src="/images/mail.png" class="exit" id="exit-glootdo" />
+        <img src="/images/x-icon.png" class="exit" id="exit-glootdo" />
       </div>
 
       <div class="cards_description__container" id="quoridor_desc_card">
@@ -115,7 +115,7 @@
           skills in Python, e.g. with the Scikit-Learn library, and learned to
           use the Pytorch library.
         </p>
-          <img src="/images/mail.png" class="exit" id="exit-quoridor" />
+          <img src="/images/x-icon.png" class="exit" id="exit-quoridor" />
       </div>
 
       <div class="cards_description__container" id="website_desc_card">
@@ -132,7 +132,7 @@
           skills in Python, e.g. with the Scikit-Learn library, and learned to
           use the Pytorch library.
         </p>
-        <img src="/images/mail.png" class="exit" id="exit-website" />
+        <img src="/images/x-icon.png" class="exit" id="exit-website" />
       </div>
     </div>
 
