--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
             <h1 class="cards__heading" id="projects">My projects!</h1>
             <div class="cards__container">
                 <div class="card" id="coveocard">
-                    <img src="/images/quoridor.png" id="coveo" />
+                    <img src="images/quoridor.png" id="coveo" />
                     <div class="project_language">Python</div>
                     <div class="project_name">Coveo Blitz 2022</div>
                 </div>
                 <div class="card" id="glootdocard">
-                    <img src="/images/glootdo.png" id="glootdo" />
+                    <img src="images/glootdo.png" id="glootdo" />
                     <div class="project_language">Java</div>
                     <div class="project_name">GlootDo</div>
                 </div>
                 <div class="card" id="websitecard">
                     <img
-                        src="/images/graphic-design-svgrepo-com.svg"
+                        src="images/graphic-design-svgrepo-com.svg"
                         id="website"
                     />
                     <div class="project_language">HTML/CSS/JS</div>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="cards_description__container" id="glootdo_desc_card">
-                <img src="/images/glootdo.png" class="img_desc" />
+                <img src="images/glootdo.png" class="img_desc" />
                 <iframe
                     class="testvideo"
                     width="560"
@@ -118,11 +118,11 @@
                     team. Learn more about the project by watching the short
                     video!
                 </p>
-                <img src="/images/x-icon.png" class="exit" id="exit-glootdo" />
+                <img src="images/x-icon.png" class="exit" id="exit-glootdo" />
             </div>
 
             <div class="cards_description__container" id="coveo_desc_card">
-                <img src="/images/quoridor.png" class="img_desc" />
+                <img src="images/quoridor.png" class="img_desc" />
                 <p class="project_descriptions">
                     On the 15th and 16th of March, I participated with 2 other
                     friends in the Coveo Blitz 2022, a 24 hours challenge. We
@@ -136,12 +136,12 @@
                     32 teams). This hackathon made me realize how important good
                     and clean code can be, even when the time is very limited.
                 </p>
-                <img src="/images/x-icon.png" class="exit" id="exit-coveo" />
+                <img src="images/x-icon.png" class="exit" id="exit-coveo" />
             </div>
 
             <div class="cards_description__container" id="website_desc_card">
                 <img
-                    src="/images/graphic-design-svgrepo-com.svg"
+                    src="images/graphic-design-svgrepo-com.svg"
                     class="img_desc"
                 />
                 <p class="project_descriptions">
@@ -156,7 +156,7 @@
                     learn more about web-developpement architecture, frameworks
                     (e.g. Vue.js), RESTful API and many other things.
                 </p>
-                <img src="/images/x-icon.png" class="exit" id="exit-website" />
+                <img src="images/x-icon.png" class="exit" id="exit-website" />
             </div>
         </div>
 
@@ -210,7 +210,7 @@
                         Python, e.g. with the Scikit-Learn library, and learned
                         to use the Pytorch library.
                     </p>
-                    <img src="/images/hasse_diagram.png" id="ulaval" />
+                    <img src="images/hasse_diagram.png" id="ulaval" />
                 </div>
             </div>
         </div>
@@ -220,19 +220,19 @@
             <ul class="medias">
                 <li class="media-item">
                     <a href="https://github.com/alexmathieu22" target="_blank"
-                        ><img src="/images/GitHub-Mark-Light-120px-plus.png"
+                        ><img src="images/GitHub-Mark-Light-120px-plus.png"
                     /></a>
                 </li>
                 <li class="media-item">
                     <a
                         href="https://www.linkedin.com/in/alexandre-mathieu-668943224/"
                         target="_blank"
-                        ><img src="/images/LI-In-Bug.png"
+                        ><img src="images/LI-In-Bug.png"
                     /></a>
                 </li>
                 <li class="media-item">
                     <a href="mailto:alexandremathieu@outlook.com"
-                        ><img src="/images/mail.png"
+                        ><img src="images/mail.png"
                     /></a>
                 </li>
             </ul>
