--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <meta
+            property="og:title"
+            content="Alexandre Mathieu's portfolio website"
+        />
+        <meta
+            property="og:description"
+            content="This website portrays Alexandre Mathieu's experiences as a future software engineer."
+        />
+        <meta property="og:image" content="images/photo.jpg" />
+
         <title>Alexandre Mathieu</title>
         <!-- STYLES CSS -->
         <link rel="stylesheet" href="styles.css" />
