--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="cards_description__container" id="coveo_desc_card">
                 <img src="images/quoridor.png" class="img_desc" />
                 <p class="project_descriptions">
-                    On the 15th and 16th of March, I participated with 2 other
+                    On the 14th and 15th of March, I participated with 2 other
                     friends in the Coveo Blitz 2022, a 24 hours challenge. We
                     were presented a particular game that had precise rules and
                     had to make a bot that would be the best at this game. This
@@ -165,7 +165,7 @@
                     web-developpement course in the winter 2022 semester, the
                     skills I acquired will be further practiced. I will also
                     learn more about web-developpement architecture, frameworks
-                    (e.g. Vue.js), RESTful API and many other things.
+                    (e.g. Vue.js), RESTful APIs and many other things.
                 </p>
                 <img src="images/x-icon.png" class="exit" id="exit-website" />
             </div>
